--- a/website/index.html
+++ b/website/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <div class="container">
+    <h1>Book Management System</h1>
     <h1>Add a Book</h1>
     <form id="bookForm">
       <label for="title">Title:</label>
@@ -29,6 +30,7 @@
     </form>
 
     <div id="message"></div>
+    <div id="bookList"></div>
   </div>
 
   <script src="website.js"></script>
