Made seperate files to manage cde easily.

--- a/website/index.html
+++ b/website/index.html
@@ -26,7 +26,7 @@
       <label for="genre">Genre:</label>
       <input type="text" id="genre" required>
 
-      <button>Add Book</button>
+      <button type="submit">Add Book</button>
     </form>
 
     <div id="message"></div>
@@ -42,6 +42,6 @@
     <div id="bookList"></div>
   </div>
 
-  <script src="website.js"></script>
+  <script src="website.js" type="module"></script>
 </body>
 </html>
